# portal-chat

./: .env  .gitignore  192.168.0.7-key.pem  192.168.0.7.pem  Cargo.toml  build.rs  cert.crt  index.html  key.key
client/: .graphqlconfig  angular.json  config.xml  cordova.config.js  package-lock.json  package.json  schema.graphql  tailwind.config.js  tsconfig.json
client/messages/: message.d.ts  message.js
client/proto/: message.proto
client/src/: global.css  global.scss  index.html
client/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  graphql.module.ts
client/src/app/components/chat/chat-content/: chat-content.component.html  chat-content.module.ts  (+1 more)
client/src/app/directives/: absolute.directive.ts  bottom.directive.ts  directives.module.ts
client/src/app/guards/: authorize-guard.service.ts
client/src/app/interfaces/: chat.ts  icredentials.ts  message.ts  room.ts  user.ts  websocket.ts
client/src/app/pages/account/: account.html  account.ts
client/src/app/pages/login/: login.html  login.ts
client/src/app/pages/room/: room-routing.module.ts  room.module.ts  room.ts
client/src/app/services/auth/: auth.module.ts  authentication.service.ts
client/src/app/services/graphql/: graphql-service.module.ts
client/src/app/services/user/: user.module.ts  user.service.ts
client/src/environments/: environment.ts
client/src/theme/: variables.css
migrations/: core.sql
src/: main.rs  routes.rs  storage.rs  tls.rs
src/actors/: database.rs  file_writer.rs  lobby.rs  mod.rs  private_streaming_lobby.rs  room.rs  session.rs  state.rs  state_storage.rs  storage.rs  streaming_session.rs  user.rs  web_socket.rs  ws_message.rs
src/actors/mutation_handlers/: add_contact_handler.rs  logout_handler.rs  mod.rs  room_creator_handler.rs  sign_in_handler.rs  sign_up_handler.rs
src/client/portal_chat/: README.md  package-lock.json  package.json
src/client/portal_chat/public/: index.html  manifest.json
src/client/portal_chat/src/: main.ts
src/client/portal_chat/src/router/: index.ts
src/client/portal_chat/tests/unit/: example.spec.ts
src/extensions/: future_spawn_ext.rs  mod.rs
src/graphql/: inputs.rs  loader.rs  mod.rs  models.rs  mutation.rs  query.rs
src/graphql/loaders/: mod.rs  participants_loader.rs  room_message_loader.rs  rooms_loader.rs  user_loader.rs
src/graphql/models/: mod.rs  room.rs  room_message.rs  user.rs
src/messages/: db_messages.rs  fs_messages.rs  mod.rs  stream_messages.rs  ws_messages.rs
src/proto/: message.proto  mod.rs
static/: index.html  manifest.json
static/js/: app.9ba6af2a.js.map  chunk-1bff95de.b04709ba.js.map  chunk-53b1137a.d754d597.js.map  chunk-vendors.6f0a5074.js.map
(+46 files in other folders)
