[package]
name = "portal-chat"
version = "0.1.0"
authors = ["mic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "=3.3.2", features = ["rustls"] }
actix-web-actors = "3.0.0"
actix-files = "0.5"
rustls = "0.18.0"
futures = "0.3.15"
serde = "1.0.125"
serde_json = "1.0.64"
deadpool-postgres = { version = "0.5.0", features = ["serde"] }
tokio-postgres = { version = "0.5.1", features = ["with-serde_json-1"] }
parking_lot = "0.11.1"
simplify_adt = {git = "https://github.com/K0R0VA/simplify_adt.git"}
async-graphql = {version = "2.9.7", features = ["dataloader"]}
async-graphql-actix-web = "2.9.7"
serde_postgres= "0.2.0"
anyhow = "1.0.42"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.48"
itertools = "0.10.1"

