[package]
name = "portal-chat"
version = "0.1.0"
authors = ["mic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "=3.3.2", features = ["rustls"] }
actix-web-actors = "3.0.0"
actix-files = "0.5"
rustls = "0.18.0"
futures = "0.3.15"
tokio = { version = "0.2.25", features = ["fs", "sync"] }
serde = "1.0.125"
serde_json = "1.0.64"
deadpool-postgres = { version = "0.5.0", features = ["serde"] }
tokio-postgres = { version = "0.5.1", features = ["with-serde_json-1", "with-chrono-0_4"] }
async-graphql = {version = "2.9.7", features = ["dataloader"]}
async-graphql-actix-web = "2.9.7"
serde_postgres= "0.2.0"
anyhow = "1.0.42"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.48"
itertools = "0.10.1"
prost = "0.8.0"
bytes = "1.0.1"
mediasoup = "0.8.4"


[build-dependencies]
prost-build = "0.8.0"

